--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -222,4 +222,54 @@
       }
     }
   }
+
+  &__toggle {
+    &--text {
+      color: $gray;
+      font-size: 12px;
+      text-transform: uppercase;
+      font-weight: 500;
+      &--selected {
+        color: $gray-dark;
+      }
+    }
+
+    &--label {
+      position: relative;
+      display: inline-block;
+      width: 32px;
+      height: 16px;
+      background-color: $gray;
+      border-radius: 20px;
+      transition: all 0.1s;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: $white;
+        top: 3px;
+        left: 3px;
+        transition: all 0.3s;
+      }
+    }
+
+    &--checkbox:checked + .pricing__toggle--label::after {
+      left: 20px;
+    }
+
+    &--checkbox:checked + .pricing__toggle--label {
+      background-color: $gray;
+    }
+
+    &--checkbox {
+      display: none;
+    }
+  }
 }
