--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -4,11 +4,11 @@
     <div class="container">
       <!-- HEADER-->
 
-      <div class="d-flex flex-column align-items-center text-center mb-5">
-        <h1>Simple, fair pricing</h1>
-        <div class="text-muted">
+      <div class="pricing__hero d-flex flex-column align-items-center text-center">
+        <h1 class="display-3">Start for free.<br>Grow as you go.</h1>
+        <p class="pricing__lead">
           Start for free, sign up for a prepaid plan and get lower rates.
-        </div>
+        </p>
       </div>
 
       <!-- CARDS --->
@@ -28,11 +28,11 @@
             <ul>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                10k API check runs&nbsp;<span class="small"> / month</span>
+                10k API check runs&nbsp;<span class="small"> / mo</span>
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                5k browser check runs&nbsp;<span class="small"> / month</span>
+                5k browser check runs&nbsp;<span class="small"> / mo</span>
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
@@ -57,7 +57,7 @@
               </div>
               <div class="text-muted small">for 10k API check runs</div>
             </div>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column pt-1">
               <div class="pricing__fancy-price justify-content-center mb-2">
                 <div class="pricing__fancy-price__dollar-sign">$</div>
                 <div class="pricing__fancy-price__price">3,60</div>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="pricing__list mb-5">
-            <ul>
+            <ul class="pt-1">
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
                 10,000 API check runs
@@ -88,8 +88,8 @@
         <!-- PREPAID  -->
 
         <div class="pricing__card pricing__card--light pricing__card--light--right">
-          <h4 class="mb-2">Prepaid</h4>
-          <div class="d-flex flex-row pricing__toggle mb-1">
+          <h4 class="mb-3">Prepaid</h4>
+          <div class="d-flex flex-row pricing__toggle mb-2">
             <div id="toggle-monthly" class="pricing__toggle--text mr-2">MONTHLY</div>
             <input type="checkbox" id="toggle" class="pricing__toggle--checkbox" />
             <label for="toggle" class="pricing__toggle--label"></label>
@@ -104,7 +104,7 @@
               </div>
               <div class="text-muted small">for 10k API check runs</div>
             </div>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column pt-1">
               <div class="pricing__fancy-price justify-content-center mb-2">
                 <div class="pricing__fancy-price__dollar-sign">$</div>
                 <div id="prepaid-browser-monthly" class="pricing__fancy-price__price">3,00</div>
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="pricing__list mb-5">
-            <ul>
+            <ul class="pt-1">
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
                 10,000 API check runs
@@ -153,7 +153,7 @@
         <div class="d-flex flex-column">
           <h2 class="mb-2">Enterprise</h2>
           <p>Get a custom plan to fit your company's needs</p>
-          <button class="btn btn-primary mb-lg-0 mb-4">Talk to sales about a custom plan</button>
+          <a class="btn btn-primary mb-lg-0 mb-4 open-intercom-link" href="mailto:support@checklyhq.com">Contact sales</a>
         </div>
         <div class="d-flex flex-column ml-lg-auto mr-5">
           <div class="pricing__list">
