--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -69,15 +69,15 @@
             <ul class="pt-1">
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                10,000 API check runs
+                Pay only for what you use
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                5,000 API check runs
+                No commitment upfront
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                5 users, 1 dashboard
+                Access to all features
               </li>
             </ul>
           </div>
@@ -117,15 +117,15 @@
             <ul class="pt-1">
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                10,000 API check runs
+                Create your own plan
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                5,000 API check runs
+                Pay upfront, get a discount
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                5 users, 1 dashboard
+                Access to all features
               </li>
             </ul>
           </div>
@@ -137,7 +137,7 @@
 
       <div class="d-flex flex-column flex-wrap justify-content-center align-items-center text-center pt-5 mb-5">
         <h2 class="mb-5">How many check runs do I need?</h2>
-        <h4 class="mb-5">5 Browser checks <span class="text-muted">running every</span> 30 minutes <span class="text-muted">makes </span>7,440 <span class="text-muted"> check runs per month</span></h4>
+        <h4 class="mb-5">5 Browser checks <span class="text-muted">running every</span> 30 minutes <span class="text-muted">makes </span>7,440<span class="text-muted"> check runs per month</span></h4>
         <div class="d-flex flex-column text-left">
           <div class="text-muted mb-2">Daily runs: 24 x 60/30 = 48 runs</div>
           <div class="text-muted mb-2">Monthly runs: 48 x 31 = 1488 runs</div>
@@ -186,7 +186,7 @@
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                Early access to roadmap features
+                Early access to features
               </li>
             </ul>
           </div>
