docs: adds features to table + set correct icons [ch-000]

--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -285,6 +285,24 @@
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
+            <th>Maintenance windows </th>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+          </tr>
+          <tr>
+            <th>API access</th>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+          </tr>
+          <tr>
+            <th>Terraform provider</th>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+            <td><i class="ion-ios-checkmark text-success"></i></td>
+          </tr>
+          <tr>
             <th>GitHub triggers</th>
             <td><i class="ion-ios-checkmark text-success"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
@@ -292,43 +310,43 @@
           </tr>
           <tr>
             <th>CI/CD customer triggers</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>Pagerduty & Opsgenie</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>Prometheus endpoint</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>SAML/SSO login</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>Invoice payment</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>Concierge onboarding</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
           <tr>
             <th>Priority support</th>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
