fix: mobile version [ch-2279]

--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -21,7 +21,6 @@
           <div class="pricing__love-devs">
             <img src="/images/love-devs.svg" alt="Checkly" />
           </div>
-
           <h4 class="mb-5">Free</h4>
           <div class="pricing__fancy-price mb-4 justify-content-center">
             <div class="pricing__fancy-price__dollar-sign">$</div>
@@ -72,7 +71,7 @@
                   <div class="text-muted small">for 1k browser check runs</div>
                 </div>
               </div>
-              <div class="pricing__list mb-5">
+              <div class="pricing__list mb-lg-5">
                 <ul class="pt-1">
                   <li>
                     <i class="ion-ios-checkmark text-primary mr-2"></i>
@@ -120,7 +119,7 @@
                   <div class="text-muted small">for 1k browser check runs</div>
                 </div>
               </div>
-              <div class="pricing__list mb-5">
+              <div class="pricing__list mb-lg-5">
                 <ul class="pt-1">
                   <li>
                     <i class="ion-ios-checkmark text-primary mr-2"></i>
@@ -155,7 +154,7 @@
         <div class="d-flex flex-column text-left">
           <div class="text-muted mb-2">Daily runs: 24 x 60/30 = 48 runs</div>
           <div class="text-muted mb-2">Monthly runs: 48 x 31 = 1488 runs</div>
-          <div class="text-muted">Five checks: 5 x 1488 = <span class="text-gray-dark">7440 runs</span></div>
+          <div class="text-muted">Five checks: 5 x 1488 = <span class="text-gray-dark pricing__check-runs-indicator pricing__check-runs-indicator--secondary">7440 runs</span></div>
         </div>
       </div>
     </div>
