--- a/src/scss/_pricing-v2.scss
+++ b/src/scss/_pricing-v2.scss
@@ -23,28 +23,9 @@
       height: 450px;
       background-color: $white;
       padding: 30px 30px 30px 20px;
-      // &--left {
-      //   border: 1px solid $gray-light;
-      //   border-right: none;
-      //   border-bottom-right-radius: 0;
-      //   border-top-right-radius: 0;
-      //   padding: 30px 30px 30px 20px;
-      //   @include media-breakpoint-down(lg) {
-      //     border: 1px solid $gray-light;
-      //     padding: 30px;
-      //   }
-      // }
-      // &--right {
-      //   border: 1px solid $gray-light;
-      //   border-left: none;
-      //   border-bottom-left-radius: 0;
-      //   border-top-left-radius: 0;
-      //   padding: 30px 20px 30px 30px;
-      //   @include media-breakpoint-down(lg) {
-      //     border: 1px solid $gray-light;
-      //     padding: 30px;
-      //   }
-      // }
+      @include media-breakpoint-down(sm) {
+        height: auto;
+      }
     }
     &--dark {
       width: 350px;
@@ -61,8 +42,9 @@
       h4 {
         color: $white;
       }
-      @include media-breakpoint-down(lg) {
+      @include media-breakpoint-down(sm) {
         margin-right: 0;
+        width: 365px;
       }
     }
 
@@ -72,7 +54,7 @@
       width: 1px;
       @include media-breakpoint-down(lg) {
         height: 1px;
-        width: 100%;
+        width: 90%;
       }
     }
 
@@ -113,6 +95,17 @@
       content: url("data:image/svg+xml,%3Csvg width='80' height='9' viewBox='0 0 89 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 8.01336C7.33333 4.34669 33.7 -1.88664 88.5 2.51336' stroke='%23FF659D' stroke-width='2'/%3E%3C/svg%3E%0A");
       left: -10px;
       bottom: -15px;
+      @include media-breakpoint-down(sm) {
+        bottom: -5px;
+      }
+    }
+    &--secondary {
+      &:after {
+        left: -2px;
+        @include media-breakpoint-down(sm) {
+          bottom: -10px;
+        }
+      }
     }
   }
 
@@ -221,10 +214,9 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    flex: 0 0 auto;
 
     &__dollar-sign {
-      display: flex;
-      align-self: baseline;
       font-size: 18px;
       line-height: 18px;
       font-weight: normal;
