chore: review changes [ch-2279]

--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -63,7 +63,7 @@
                   </div>
                   <div class="text-muted small">for 10k API check runs</div>
                 </div>
-                <div class="d-flex flex-column pt-1">
+                <div class="d-flex flex-column">
                   <div class="pricing__fancy-price justify-content-center mb-2">
                     <div class="pricing__fancy-price__dollar-sign">$</div>
                     <div class="pricing__fancy-price__price">3,60</div>
@@ -110,7 +110,7 @@
                   </div>
                   <div class="text-muted small">for 10k API check runs</div>
                 </div>
-                <div class="d-flex flex-column pt-1">
+                <div class="d-flex flex-column">
                   <div class="pricing__fancy-price justify-content-center mb-2">
                     <div class="pricing__fancy-price__dollar-sign">$</div>
                     <div id="prepaid-browser-monthly" class="pricing__fancy-price__price">3,00</div>
@@ -360,7 +360,7 @@
           <tr>
             <th>Priority support</th>
             <td><i class="ion-close-circled text-muted"></i></td>
-            <td><i class="ion-ios-checkmark text-muted"></i></td>
+            <td><i class="ion-close-circled text-muted"></i></td>
             <td><i class="ion-ios-checkmark text-success"></i></td>
           </tr>
         </tbody>
