docs: adds text about data retention [ch-2295]

--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -199,7 +199,7 @@
               </li>
               <li>
                 <i class="ion-ios-checkmark text-primary mr-2"></i>
-                Early access to features
+                Custom data retention
               </li>
             </ul>
           </div>
@@ -245,8 +245,8 @@
           </tr>
           <tr>
             <th>Check intervals</th>
-            <td>1 min / 10 min</td>
-            <td>1 min / 10 min</td>
+            <td>1 min / 5 min</td>
+            <td>1 min / 5 min</td>
             <td>Custom</td>
           </tr>
           <tr>
@@ -266,6 +266,22 @@
             <td>20</td>
             <td>20</td>
             <td>20</td>
+          </tr>
+          <tr>
+            <th>
+              Raw data retention
+            </th>
+            <td>7 days</td>
+            <td>30 days</td>
+            <td>Custom</td>
+          </tr>
+          <tr>
+            <th>
+              Aggregated data retention
+            </th>
+            <td>30 days</td>
+            <td>1 year</td>
+            <td>Custom</td>
           </tr>
           <tr>
             <th>SMS credits</th>
