--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -5,7 +5,7 @@
       <!-- HEADER-->
 
       <div class="pricing__hero d-flex flex-column align-items-center text-center">
-        <h1 class="display-3">Start for free.<br>Grow as you go.</h1>
+        <h1 class="display-3">Free for developers.<br>Grow as you go.</h1>
         <p class="pricing__lead">
           Start for free, sign up for a prepaid plan and get lower rates.
         </p>
