feat: prep CTA and wording for pricing release [ch-2275]

--- a/site/layouts/alternative/single.html
+++ b/site/layouts/alternative/single.html
@@ -5,5 +5,5 @@
         {{ partial "testimonial-quote-full-width-1" . }}
         <span class="product markdown">{{.Content}}</span>
   </div>
-  {{ partial "free-trial-row" . }}
+  {{ partial "start-for-free-row" . }}
 {{end}}
