--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -22,7 +22,7 @@
         <form class="form-inline my-2 my-lg-0 ml-md-3">
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="login-button" href="https://app.checklyhq.com/">Log in</a>
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="dashboard-button" style="display: none;" href="https://app.checklyhq.com/">Dashboard<div class="ion-arrow-right-c d-inline ml-2"></div></a>
-          <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a>
+          <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start for free</a>
         </form>
         {{end}}
       </ul>
