--- a/site/layouts/partials/start-for-free-row.html
+++ b/site/layouts/partials/start-for-free-row.html
@@ -5,10 +5,10 @@
         <div class="card">
           <div class="card-block">
             <div class="text-center">
-              <div class="section-header pt-4 font-weight-bold">Try out Checkly for free for 14 days</div>
+              <div class="section-header pt-4 font-weight-bold">Try out Checkly for free</div>
               <p class="lead-text">Start monitoring your API endpoints and your vital site transactions.</p><a
                 class="signup-button btn btn-success btn-lg" data-signup="data-signup"
-                href="https://app.checklyhq.com/signup">Start your free trial</a>
+                href="https://app.checklyhq.com/signup">Start for free</a>
               <div class="pt-2 text-muted mb-4"><small>no credit card required</small></div>
             </div>
           </div>
