feat: updates pricing example [ch-2275]

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -149,12 +149,12 @@
       <div class="d-flex flex-column flex-wrap justify-content-center align-items-center text-center pt-5 mb-5">
         <h2 class="mb-5">How many check runs do I need?</h2>
         <h4 class="mb-5">
-          5 Browser checks <span class="text-muted">running every</span> 30 minutes <span class="text-muted">makes </span> <span class="pricing__check-runs-indicator">7,440</span> <span class="text-muted"> check runs per month</span>
+          5 API checks <span class="text-muted">running every</span> minute <span class="text-muted">makes </span> <span class="pricing__check-runs-indicator">223,200</span> <span class="text-muted"> check runs per month</span>
         </h4>
         <div class="d-flex flex-column text-left">
-          <div class="text-muted mb-2">Daily runs: 24 x 60/30 = 48 runs</div>
-          <div class="text-muted mb-2">Monthly runs: 48 x 31 = 1488 runs</div>
-          <div class="text-muted">Five checks: 5 x 1488 = <span class="text-gray-dark pricing__check-runs-indicator pricing__check-runs-indicator--secondary">7440 runs</span></div>
+          <div class="text-muted mb-2">Daily runs: 24 x 60 = 1440 runs</div>
+          <div class="text-muted mb-2">Monthly runs: 1440 x 31 = 44,640 runs</div>
+          <div class="text-muted">Five checks: 5 x 44,640 = <span class="text-gray-dark pricing__check-runs-indicator pricing__check-runs-indicator--secondary">223,200 runs</span></div>
         </div>
       </div>
     </div>
